# tauri-test

./: .editorconfig  .prettierrc  CMakeLists.txt  README.md  auto-imports.d.ts  components.d.ts  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yaml
examples/: color_conversion_example.cpp  image_color_conversion_example.cpp  image_color_conversion_example.py
include/color/: ColorConverter.hpp  ColorTypes.hpp
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  build.rs  requirements.txt  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/cpp/: hello.cpp  hello.h  math_lib.cpp  math_lib.h
src-tauri/python_scripts/: hello.py
src-tauri/src/: lib.rs  main.rs
src/assets/css/: tailwind.css
src/color/: ColorConverter.cpp
src/components/: SnakeGame.vue
src/components/window/: Titlebar.vue
src/layouts/: Default.vue
src/pages/: Home.vue  PdfViewer.vue
