[package]
name = "tauri-test"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tauri-test"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.9", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.12", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-os = "2.0.0-beta.2"
tauri-plugin-dialog = "2.0.0-beta.2"
tauri-plugin-fs = "2.0.0-beta.2"
tauri-plugin-opener = "2.0.0-beta.2"

[features]
custom-protocol = ["tauri/custom-protocol"]

